--- a/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/Edms/edm_campaign_main.html
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/EmailTemplates/Edms/edm_campaign_main.html
@@ -105,23 +105,16 @@ a[x-apple-data-detectors],
           <td align="center" style="padding:0;Margin:0">
            <table bgcolor="#ffffff" align="center" cellpadding="0" cellspacing="0" class="bc" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:transparent;width:600px">
              <tr>
-              <td align="left" style="Margin:0;padding-top:10px;padding-right:20px;padding-bottom:10px;padding-left:20px">
-               <table cellpadding="0" cellspacing="0" width="100%" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                 <tr>
-                  <td valign="top" align="center" class="be" style="padding:0;Margin:0;width:560px">
-                   <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                   </table></td>
-                 </tr>
-               </table></td>
-             </tr>
-             <tr>
               <td align="left" style="padding:0;Margin:0;padding-right:20px;padding-left:20px;padding-top:20px">
                <table width="100%" cellpadding="0" cellspacing="0" role="none" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                  <tr>
                   <td align="left" style="padding:0;Margin:0;width:560px">
                    <table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                      <tr>
-                      <td align="center" style="padding:0;Margin:0;font-size:0"><img src="https://fkcjtyt.stripocdn.email/content/guids/CABINET_bebb6bd17a9614ae8a4fe2cd7d7ebaad2c43947d967de4b8e7bdb71f189d3a19/images/78cd284834094ad2b1c0995fb6abf6ca.png" alt="" width="200" class="adapt-img" style="display:block;font-size:14px;border:0;outline:none;text-decoration:none"></td>
+                      <td align="center" style="padding:0;Margin:0;font-size:0"><img src="{{LogoUrl}}" alt="" width="200" class="adapt-img" style="display:block;font-size:14px;border:0;outline:none;text-decoration:none"></td>
+                     </tr>
+                     <tr>
+                      <td style="height: 20px;"></td>
                      </tr>
                    </table></td>
                  </tr>
@@ -142,19 +135,19 @@ a[x-apple-data-detectors],
                    <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                      <tr>
                       <td class="a" style="padding:0;Margin:0;padding-bottom:5px;padding-top:5px">
-                        <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">Hi {{memberName}} 👋,</p>
-                        <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">We’re excited to invite you to our {{campaignName}} — and as part of the {{groupBuyName}} group buy, you’re getting a special reward! 🎁</p>
-                        <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">Here’s what you get:</p>
-                        <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">🗓 <span style="font-weight: 600;">Campaign Period</span>: {{campaignPeriod}}</p>
+                        <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:20px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">嗨 {{MemberName}} 👋,</p>
+                        <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">我們很高興邀請您參加我們的 {{CampaignName}} — 作為 {{GroupBuyName}} 團購的一員，您將獲得特別獎勵！🎁</p>
+                        <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">以下是您將獲得的內容：</p>
+                        <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">🗓 <span style="font-weight: 600;">活動期間</span>: {{CampaignPeriod}}</p>
                         {{edm_campaign_properties}}
-                        <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">🛍 <span style="font-weight: 600;">Eligible Products</span>: All applicable items across our store</p>
-                        <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">Just use your discount code at checkout and enjoy your savings.</p>
-                        <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">⏰ Remember, this offer is only valid during {{campaignPeriod}}, so make the most of it while it lasts!</p>
+                        <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">🛍 <span style="font-weight: 600;">適用商品</span>: 本店內所有適用商品</p>
+                        <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">只需在結帳時使用您的折扣碼，即可享受優惠。</p>
+                        <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">⏰ 請注意，此優惠僅在 {{CampaignPeriod}} 期間有效，請把握機會！</p>
                       </td>
                      </tr>
                      <tr>
                       <td>
-                        <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">{{message}}</p>
+                        <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">{{Message}}</p>
                       </td>
                      </tr>
                    </table></td>
@@ -170,13 +163,7 @@ a[x-apple-data-detectors],
                      <tr>
                      </tr>
                      <tr>
-                      <td align="center" style="padding:0;Margin:0;padding-bottom:10px;padding-top:15px"><span class="t" style="border-style:solid;border-color:#23856d;background:#23856d;border-width:2px;display:inline-block;border-radius:5px;width:auto"><a href="" target="_blank" class="p p-1621620532140" style="mso-style-priority:100 !important;text-decoration:none !important;mso-line-height-rule:exactly;color:#FFFFFF;font-size:20px;padding:10px 30px;display:inline-block;background:#23856d;border-radius:5px;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-weight:normal;font-style:normal;line-height:24px;width:auto;text-align:center;letter-spacing:0;mso-padding-alt:0;mso-border-alt:10px solid #23856d">Shop Now</a></span></td>
-                     </tr>
-                     <tr>
-                      <td align="center">
-                        <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">Thanks for being with us,</p>
-                        <p style="Margin:0;font-family:arial, 'helvetica neue', helvetica, sans-serif;mso-line-height-rule:exactly;letter-spacing:0;font-size:16px;font-style:normal;font-weight:normal;line-height:30px;color:#333333">Your [Brand Name] Team</p>
-                      </td>
+                      <td align="center" style="padding:0;Margin:0;padding-bottom:10px;padding-top:15px"><span class="t" style="border-style:solid;border-color:#23856d;background:#23856d;border-width:2px;display:inline-block;border-radius:5px;width:auto"><a href="{{ButtonLink}}" target="_blank" class="p p-1621620532140" style="mso-style-priority:100 !important;text-decoration:none !important;mso-line-height-rule:exactly;color:#FFFFFF;font-size:20px;padding:10px 30px;display:inline-block;background:#23856d;border-radius:5px;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-weight:normal;font-style:normal;line-height:24px;width:auto;text-align:center;letter-spacing:0;mso-padding-alt:0;mso-border-alt:10px solid #23856d">立即購買</a></span></td>
                      </tr>
                    </table></td>
                  </tr>
@@ -232,14 +219,14 @@ a[x-apple-data-detectors],
                       <td align="center" style="padding:0;Margin:0;padding-top:15px;padding-bottom:15px;font-size:0">
                        <table cellpadding="0" cellspacing="0" class="c q" role="presentation" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                          <tr>
-                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:40px"><img title="Facebook" src="https://fkcjtyt.stripocdn.email/content/assets/img/social-icons/logo-black/facebook-logo-black.png" alt="Fb" width="32" style="display:block;font-size:14px;border:0;outline:none;text-decoration:none"></td>
-                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:40px"><img src="https://fkcjtyt.stripocdn.email/content/assets/img/social-icons/logo-black/instagram-logo-black.png" alt="Inst" width="32" title="Instagram" style="display:block;font-size:14px;border:0;outline:none;text-decoration:none"></td>
-                          <td align="center" valign="top" style="padding:0;Margin:0;padding-right:40px"><img width="32" title="Line" src="https://fkcjtyt.stripocdn.email/content/assets/img/messenger-icons/logo-black/line-logo-black.png" alt="Line" style="display:block;font-size:14px;border:0;outline:none;text-decoration:none"></td>
+                            <td align="center" valign="top" style="padding:0;Margin:0;padding-right:40px"><a href="{{FacebookUrl}}" target="_blank"><img title="Facebook" src="https://frhjfai.stripocdn.email/content/assets/img/social-icons/logo-black/facebook-logo-black.png" alt="Fb" width="32" style="display:block;font-size:14px;border:0;outline:none;text-decoration:none"></a></td>
+                            <td align="center" valign="top" style="padding:0;Margin:0;padding-right:40px"><a href="{{InstagramUrl}}" target="_blank"><img title="Instagram" src="https://frhjfai.stripocdn.email/content/assets/img/social-icons/logo-black/instagram-logo-black.png" alt="Inst" width="32" style="display:block;font-size:14px;border:0;outline:none;text-decoration:none"></a></td>
+                            <td align="center" valign="top" style="padding:0;Margin:0"><a href="{{LineUrl}}" target="_blank"><img alt="Line" width="32" title="Line" src="https://frhjfai.stripocdn.email/content/assets/img/messenger-icons/logo-black/line-logo-black.png" style="display:block;font-size:14px;border:0;outline:none;text-decoration:none"></a></td>
                          </tr>
                        </table></td>
                      </tr>
                      <tr>
-                      <td align="center" style="padding:0;Margin:0;padding-bottom:35px"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:18px;letter-spacing:0;color:#333333;font-size:12px">Copyright © 2024 [tenant]. All rights reserved.</p></td>
+                      <td align="center" style="padding:0;Margin:0;padding-bottom:35px"><p style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:18px;letter-spacing:0;color:#333333;font-size:12px">Copyright © {{CurrentYear}} {{CompanyName}}. All rights reserved.</p></td>
                      </tr>
                    </table></td>
                  </tr>
